--- a/doc/tutorial/tutorial-server.tex
+++ b/doc/tutorial/tutorial-server.tex
@@ -148,7 +148,7 @@ can be suggested later on).
 
 \marginpar{{\bf New!}
  Note that patients (and runs and samples) can also be created at once by
-pasting a table from a spreadsheet editor. See specification at \href{https://www.vidjil.org/doc/user/#batch-creation-of-patientsrunssets}{\tt batch-creation-of-patientsrunssets}}
+pasting a table from a spreadsheet editor. See specification at \href{https://www.vidjil.org/doc/user/\#batch-creation-of-patientsrunssets}{\tt batch-creation-of-patientsrunssets}}
 
 Now the three patients and the run have been created but we have not uploaded
 the sequence files yet.
