--- a/doc/tutorial/tutorial-vidjil-server.tex
+++ b/doc/tutorial/tutorial-vidjil-server.tex
@@ -1,54 +1,25 @@
 
 \begin{verbatim}
+/// <reference types="cypress" />
 
-load 'vidjil_browser.rb'
-load 'server_test.rb'
-
-class LiveTestSampleSets < ServerTest
-
-  def setup
-    super
-    if not defined? $b
-      if ENV['URL']
-        set_browser(URL)
-      else
-        set_browser("http://localhost/browser/")
-      end
-    end
-    $b.login(logins("admin", "user"), logins("admin", "password"))
-  end
-
-   def go_to_list_patient
-    $b.a(:class => "button button_token patient_token", :text => "patients").click
-    Watir::Wait.until(30) {$b.execute_script("return jQuery.active") == 0}
-
-    table = $b.table(:id => "table")
-    table.wait_until_present
-    table
-  end
-
-  def test_000_demo_logged_in
-    # login_form = $b.form(:id => 'login_form')
-    assert(!$b.login_form.present?)
-
-    ## Give right to real data (anon) for grp ADMIN
-    $b.go_to_groups()
-    $b.get_group_line("admin").click
-    Watir::Wait.until(5) {$b.execute_script("return jQuery.active") == 0}
-    $b.set_grp_right("anon", true) # remove anon
-    Watir::Wait.until(5) {$b.execute_script("return jQuery.active") == 0}
+describe('Tutorial server', function () {
+    before(function () {
+        cy.login(Cypress.env('host'))
+        cy.close_tips()
+    })
+    beforeEach(function () {
+    })
+    afterEach(function () {
+    })
+    after(function () {
+        cy.clearCookies()
+    })
 
 
-    ## Give right to real data (anon) for grp PUBLIC
-    $b.go_to_groups()
-    $b.get_group_line("public").click
-    Watir::Wait.until(5) {$b.execute_script("return jQuery.active") == 0}
-    $b.set_grp_right("anon", true) # remove anon
-    Watir::Wait.until(5) {$b.execute_script("return jQuery.active") == 0}
-  end
-  ######################################
-  ### Manipulate server and database
-  ######################################
+  // ######################################
+  // ### Manipulate server and database
+  // ######################################
+  it('00-tutorial-server',  function() {
 
 
 \end{verbatim}
@@ -56,10 +27,10 @@ class LiveTestSampleSets < ServerTest
 \input{tutorial-server}
 
 \begin{verbatim}
+*/
 
-  # Not really a test
-  def test_zz_close
-    close_everything
-  end
-end
+    return
+  })
+})
+
 \end{verbatim}
