tutorial, convert script client several-sample & export to cypress WARNING; script for export don't have real cypress testing

--- a/doc/tutorial/tutorial-export.tex
+++ b/doc/tutorial/tutorial-export.tex
@@ -75,3 +75,11 @@ This exports the current view of the plot.}
   exported with the \com{export aligned fasta} button in the
   \com{import/export} menu.}
 
+\begin{verbatim}
+  ///////////////////////////
+  // test_D_export_01
+
+    cy.log("TODO, no tutorial testing on export menu/report")
+    // TODO
+
+\end{verbatim}
