tutorial; give more time to open analysis Without this longer timeout, some runnner failed to open file in the default given time

--- a/doc/tutorial/tutorial-vidjil-browser.tex
+++ b/doc/tutorial/tutorial-vidjil-browser.tex
@@ -14,7 +14,7 @@ describe('Tutorial browser', function () {
     })
 
   it('00-tutorial-browser',  function() {
-    cy.openAnalysis("data/demo_lil_l3_tutorial.vidjil")
+    cy.openAnalysis("doc/demo_lil_l3_tutorial.vidjil", undefined, 90000)
 
 
 \end{verbatim}
